# arkive

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README.md  SPIKE_arkive.md
docs/: arkive-high-level-architecture.excalidraw
qml/: ArticleView.qml  FileBrowser.qml  ImportPanel.qml  Main.qml  SettingsPanel.qml  SkillPanel.qml  Theme.qml
src/: main.cpp
src/core/: CloudLlmClient.cpp  CloudLlmClient.h  ExifReader.cpp  ExifReader.h  GeocodeCache.cpp  GeocodeCache.h  IndexManager.cpp  IndexManager.h  LlmClient.h  MarkdownParser.cpp  MarkdownParser.h  MessageIngestor.cpp  MessageIngestor.h  PhotoIngestor.cpp  PhotoIngestor.h  SnapchatIngestor.cpp  SnapchatIngestor.h  VaultManager.cpp  VaultManager.h  WikiCompiler.cpp  WikiCompiler.h
src/models/: ArticleModel.cpp  ArticleModel.h  FileTreeModel.cpp  FileTreeModel.h
tests/: test_article_model.cpp  test_cloud_llm_client.cpp  test_exif_reader.cpp  test_file_tree_model.cpp  test_geocode_cache.cpp  test_index_manager.cpp  test_main.cpp  test_markdown_parser.cpp  test_message_ingestor.cpp  test_photo_ingestor.cpp  test_snapchat_ingestor.cpp  test_vault_manager.cpp  test_wiki_compiler.cpp
